[gd_scene load_steps=6 format=3 uid="uid://settings_ui_scene"]

[ext_resource type="Script" path="res://scripts/SettingsMenu.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_main"]
bg_color = Color(0.12, 0.12, 0.14, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sidebar"]
bg_color = Color(0.08, 0.08, 0.1, 1)
corner_radius_top_left = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 10
content_margin_top = 8
content_margin_right = 10
content_margin_bottom = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.3, 0.3, 0.35, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
content_margin_left = 10
content_margin_top = 8
content_margin_right = 10
content_margin_bottom = 8

[node name="SettingsUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(1100, 700)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_main")

[node name="content_split" type="HBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Sidebar" type="PanelContainer" parent="CenterContainer/MainPanel/content_split"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sidebar")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/MainPanel/content_split/Sidebar"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="SidebarVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "SETTINGS"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
layout_mode = 2

[node name="NavGameBtn" type="Button" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
toggle_mode = true
button_pressed = true
text = "Character & Game"
alignment = 0

[node name="NavAPIBtn" type="Button" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
toggle_mode = true
text = "LLM & Connection"
alignment = 0

[node name="NavPromptsBtn" type="Button" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_hover")
toggle_mode = true
text = "System Prompts"
alignment = 0

[node name="Spacer" type="Control" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.6, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Save Settings"

[node name="CloseButton" type="Button" parent="CenterContainer/MainPanel/content_split/Sidebar/MarginContainer/SidebarVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Close Menu"

[node name="RightSide" type="MarginContainer" parent="CenterContainer/MainPanel/content_split"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GameSettingsSection" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Player Persona Configuration"

[node name="ActivePersonaBox" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/ActivePersonaBox"]
layout_mode = 2
text = "Active Persona:"

[node name="ActivePersonaOption" type="OptionButton" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/ActivePersonaBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(280, 35)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection"]
layout_mode = 2

[node name="EditorSplit" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="SlotListContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/SlotListContainer"]
layout_mode = 2
text = "Persona Slots"

[node name="PersonaSlotList" type="ItemList" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/SlotListContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="EditorContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="EditorScroll" type="ScrollContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="EditorVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="NameBox" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/NameBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Name:"

[node name="PersonaNameInput" type="LineEdit" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/NameBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Persona name (optional)"

[node name="SexBox" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/SexBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Sex:"

[node name="PersonaSexOption" type="OptionButton" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/SexBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 35)
layout_mode = 2

[node name="SpeciesBox" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/SpeciesBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Species:"

[node name="PersonaSpeciesOption" type="OptionButton" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/SpeciesBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 35)
layout_mode = 2

[node name="PersonaRaceContainer" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/PersonaRaceContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Pony Race:"

[node name="PersonaRaceOption" type="OptionButton" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox/PersonaRaceContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 35)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox"]
layout_mode = 2

[node name="AppearanceLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox"]
layout_mode = 2
text = "Appearance Description"

[node name="PersonaAppearanceInput" type="TextEdit" parent="CenterContainer/MainPanel/content_split/RightSide/GameSettingsSection/EditorSplit/EditorContainer/EditorScroll/EditorVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 180)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Describe your character's physical appearance, style, notable features, etc..."
wrap_mode = 1

[node name="APISettingsSection" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "LLM API Configuration"

[node name="ScrollArea" type="ScrollContainer" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="ProviderBox" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/ProviderBox"]
layout_mode = 2
text = "Provider:"

[node name="ProviderOption" type="OptionButton" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/ProviderBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "OpenAI Compatible"
popup/item_0/id = 0
popup/item_1/text = "Google Gemini"
popup/item_1/id = 1

[node name="OpenAISettings" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/OpenAISettings"]
layout_mode = 2
text = "API URL"

[node name="APIURLInput" type="LineEdit" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/OpenAISettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "https://api.openai.com/v1/chat/completions"

[node name="Label2" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/OpenAISettings"]
layout_mode = 2
text = "API Key"

[node name="APIKeyInput" type="LineEdit" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/OpenAISettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
secret = true
placeholder_text = "sk-..."

[node name="Label3" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/OpenAISettings"]
layout_mode = 2
text = "Model Name"

[node name="ModelInput" type="LineEdit" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/OpenAISettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
placeholder_text = "gpt-4"

[node name="GeminiSettings" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/GeminiSettings"]
layout_mode = 2
text = "Gemini API Key"

[node name="GeminiKeyInput" type="LineEdit" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/GeminiSettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
secret = true

[node name="Label2" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/GeminiSettings"]
layout_mode = 2
text = "Gemini Model"

[node name="GeminiModelInput" type="LineEdit" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/GeminiSettings"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox"]
layout_mode = 2

[node name="CommonSettings" type="GridContainer" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox"]
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 15
columns = 2

[node name="TempLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
layout_mode = 2
text = "Temperature"

[node name="TemperatureInput" type="SpinBox" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
step = 0.1
value = 0.7

[node name="ContextLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
layout_mode = 2
text = "Max Context"

[node name="MaxContextInput" type="SpinBox" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 200000.0
step = 1000.0
value = 64000.0

[node name="AutoSummaryLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
unique_name_in_owner = true
layout_mode = 2
text = "Auto-Summary Limit"

[node name="AutoSummaryInput" type="SpinBox" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 200000.0
step = 1000.0
value = 54000.0

[node name="MaxResponseLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
layout_mode = 2
text = "Max Response"

[node name="MaxResponseInput" type="SpinBox" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 32000.0
step = 100.0
value = 4000.0

[node name="TopPLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
layout_mode = 2
text = "Top P"

[node name="TopPInput" type="SpinBox" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.9

[node name="TopKLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
layout_mode = 2
text = "Top K"

[node name="TopKInput" type="SpinBox" parent="CenterContainer/MainPanel/content_split/RightSide/APISettingsSection/ScrollArea/ContentVBox/CommonSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 200.0
value = 50.0

[node name="PromptSettingsSection" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "System Prompts"

[node name="DescriptionLabel" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Configure the base prompts used by the LLM for different game functions."

[node name="SelectorHBox" type="HBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection/SelectorHBox"]
layout_mode = 2
text = "Select Prompt Type:"

[node name="PromptSelector" type="OptionButton" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection/SelectorHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 40)
layout_mode = 2

[node name="PromptEditorContainer" type="VBoxContainer" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection/PromptEditorContainer"]
layout_mode = 2
text = "Prompt Content"

[node name="PromptContentInput" type="TextEdit" parent="CenterContainer/MainPanel/content_split/RightSide/PromptSettingsSection/PromptEditorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1
